updated notebook to display video

--- a/Advance Lane Finding.ipynb
+++ b/Advance Lane Finding.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -811,12 +811,12 @@
     "detector = LaneDetector()\n",
     "clip = VideoFileClip(\"test_videos/project_video.mp4\")\n",
     "output = clip.fl_image(detector.process)\n",
-    "output.write_videofile('output.mp4', audio=False)"
+    "output.write_videofile('output_videos/output.mp4', audio=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -824,14 +824,14 @@
       "text/html": [
        "\n",
        "<video width=\"960\" height=\"540\" controls>\n",
-       "  <source src=\"output.mp4\">\n",
+       "  <source src=\"output_videos/output.mp4\">\n",
        "</video>\n"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -841,7 +841,7 @@
     "<video width=\"960\" height=\"540\" controls>\n",
     "  <source src=\"{0}\">\n",
     "</video>\n",
-    "\"\"\".format('output.mp4'))"
+    "\"\"\".format('output_videos/output.mp4'))"
    ]
   },
   {
